--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+.span__error {
+  color: red;
+  margin-top: -1.5rem;
+  font-size: x-small;
+  margin-bottom: 4px;
+}
