--- a/src/app/pages/todos-pages/create-todo-page/create-todo-page.component.html
+++ b/src/app/pages/todos-pages/create-todo-page/create-todo-page.component.html
@@ -11,7 +11,7 @@
         <span class="span__error"> Champ obligatoire.</span>
       }
       @if (todoForm.controls.todoTitle.errors && todoForm.controls.todoTitle.errors['minlength'] && todoForm.controls.todoTitle.dirty) {
-        <span class="span__error">Caractère minimum est de 5.</span>
+        <span class="span__error">Caractères minimum est de 5.</span>
       }
 
       <div class="div__input-task">
