--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,2 +1,2 @@
-<app-authentification formTitle="Connexion" />
+<app-authentification formTitle="Connexion" (authentificationFormValues)="onLogin($event)"/>
 <!--<app-authentification [formTitle]="'Connexion'" /> -->
