--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,1 +1,1 @@
-<app-authentification [formTitle]="'Inscription'"/>
+<app-authentification [formTitle]="'Inscription'" (authentificationFormValues)="onRegister($event)"/>
